RH menu and some UIkit adds

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
-Theme Name:         TPP site
-Theme URI:          https://roots.io/sage/
-Description:        TPP site, using Sage 8.4 with BS removed
+Theme Name:         TPP site theme
+Theme URI:          http://iwantcat.com
+Description:        TPP site, using UIkit and Sage 8.4 with BS removed
 Version:            8.4.0
 Author:             I Want Cat
 Author URI:         http://iwantcat.com/
