--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -40,7 +40,15 @@ $navbar-nav-onclick-background: #c44b17;
 
 
 
-
+.cat-grid{
+	    box-sizing: border-box;	
+	@extend .uk-grid;
+	@extend .uk-grid-match;
+	@extend .uk-grid-width-1-4;
+	& > * {
+	    box-sizing: border-box;
+	}
+}
 
 
 
