--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,16 +1,6 @@
+/* Theme: Default */
 
-/* theme: Default */
 
-
-//
-// Typography
-//
-
-$global-color: #2e3042;
-$global-link-color: #c34a17;
-$global-link-hover-color: #a83f13;
-
-//
 // Breakpoints
 //
 
@@ -20,30 +10,11 @@ $breakpoint-large: 961px;
 $breakpoint-xlarge: 1221px;
 
 //
-// Block
-//
 
-$block-primary-background: #c44b17;
-
-//
-// Icon
-//
-
-$icon-font-path: "../../fonts";
-
-//
-// Navbar
-//
-
-$navbar-background: rgba(0, 0, 0, 0);
-$navbar-nav-onclick-background: #c44b17;
-
-
-
-
-
-
-
-.container{
-	@extend .uk-container;
+.container {
+	@extend .uk-container-center;
 }
+
+
+
+
