--- a/assets/styles/layouts/_footer.scss
+++ b/assets/styles/layouts/_footer.scss
@@ -1,7 +1,7 @@
 footer {
-	background: $brand-10pc;
+	/*background: $brand-10pc;
 	margin: 20px 0;
-	padding: 40px;
+	padding: 40px;*/
 	
 		section.widget {
 			@extend .uk-panel ;
