homepage and general settings

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,15 +1,15 @@
+@import "common/variables";
 @import "../../bower_components/uikit/scss/uikit-mixins.scss";
-
-
 
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
 // endbower
 
 @import "../../bower_components/uikit/scss/uikit.scss";
+@import "../../bower_components/uikit/scss/components/autocomplete.scss";
+@import "../../bower_components/uikit/scss/components/accordion.scss";
 
 
-@import "common/variables";
 @import "common/global";
 @import "components/buttons";
 @import "components/comments";
@@ -22,4 +22,3 @@
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
-@import "common/tpp-custom";
