--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -18,7 +18,7 @@
 }
 
 
-.cat-panel{
+.cat-panel, .pagenav li{
 	@extend .uk-panel;
 	@extend .uk-panel-box;
 	@extend .uk-panel-box-primary;
@@ -26,4 +26,14 @@
 
 .container {
 	@extend .uk-container;
+}
+
+// Icons in page menus
+$icons: 'heart', 'calendar-plus-o', 'question-circle', 'meh-o';
+
+@each $i in $icons {
+  li.#{$i} h3 a{
+    @extend .uk-icon-#{$i};
+    font-family: FontAwesome;
+  }
 }
