button and table @extend UIkit

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -1,7 +1,12 @@
 
 /* theme: Default */
 
-
+table {
+	@extend .uk-table;
+}
+button {
+	@extend .uk-button;
+}
 
 .cat-grid{
 	    box-sizing: border-box;	
