--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,7 +8,7 @@
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
 // endbower
-
+@import "../../bower_components/uikit/scss/components/accordion.scss";
 
 
 @import "common/global";
