--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -256,7 +256,15 @@ color: $dark-neutral;
 }
 
 
-//
+// pagenav 
+
+.pagenav li {
+	@extend .uk-width-1-4;
+	extend: %orange-crush;
+	a {
+	color: $white;
+	}
+}
 
 
 // FONT STUFF
@@ -335,48 +343,49 @@ $button-active-color:                            #444 !default;
 
 // PANELS
 
-@mixin hook-panel-box-primary(){
-@extend %orange-crush;
-}
+
+ 
+
+/*@mixin hook-panel-box-primary(){
+background-image: url('../images/textures/diagonal-noise.png');
+	background-repeat: repeat;
+	 background-blend-mode: multiply;
+
+}*/
 
 // $panel-box-padding:                              15px !default;
-$panel-box-background:                           $light-neutral;
+ $panel-box-background:                           lighten($brand-primary, 5%) url('../images/textures/diagonal-noise.png');
 $panel-box-color:                                $dark-neutral;
 $panel-box-hover-color:                          $brand-primary;
-$panel-box-title-color:                          $panel-box-color;
+$panel-box-title-color:                          $white;
+$panel-box-background-image:				url('../images/textures/diagonal-noise.png');
 
-$panel-box-primary-background:                   none;
+// $panel-box-primary-background:                   lighten($brand-primary, 5%);
+//$panel-box-primary-background-image:				url('../images/textures/diagonal-noise.png');
 $panel-box-primary-color:                        $white;
 $panel-box-primary-hover-color:                  $panel-box-primary-color !default;
 $panel-box-primary-title-color:                  $white;
 
+$panel-header-title-color: $white;
 
 
-.uk-panel-box-primary,
-.cat-panel {
-	// @extend %orange-crush;
-}
+@mixin hook-panel-box(){
+@extend %orange-crush;
+ 	 }
 
-/*.cat-panel {
-	@extend %radius;
-}*/
 
-.uk-panel-box-primary {
-	@extend %orange-crush;
-}
 
 .cat-panel h3 {
 	color:  $white;
 }
-/*.uk-panel {
-	@extend %orange-crush;
+
+
+/*.uk-panel-box {
+background-blend-mode: multiply;
+color: $panel-box-primary-title-color;
 }*/
 
-.uk-panel-box-primary {
-    color: $panel-box-primary-color;
-   // @include hook-panel-box-primary();
-    @extend %texture-background;
-}
+
 
 // FOOTER
 
@@ -436,13 +445,13 @@ $tab-active-color: $white;
 $tab-hover-border:  $light-neutral;         
 $tab-hover-background: $light-neutral;
 
-@mixin hook-tab(){
+/*@mixin hook-tab(){
 // @extend %orange-crush;
 }
 @mixin hook-tab-hover(){}
 @mixin hook-tab-active(){}
 @mixin hook-tab-disabled(){}
-@mixin hook-tab-misc(){}
+@mixin hook-tab-misc(){}*/
 
 .uk-tab li a {
 	font-size: 1.3em;
