bastard mixins or not - texture panel styles

--- a/assets/styles/common/_global.scss
+++ b/assets/styles/common/_global.scss
@@ -38,13 +38,12 @@ button {
 			@extend .uk-width-large-1-2;
 	}
 
-.cat-panel, .pagenav li{
-	@extend .uk-panel;
-	@extend .uk-panel-box;
+.cat-panel {
+	// @extend .uk-panel;
+	// @extend .uk-panel-box;
 	//@extend .uk-panel-box-primary;
 
 }
-
 
 .container {
 	@extend .uk-container;
