--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,4 +1,4 @@
-@import "../../bower_components/uikit/scss/uikit-mixins.scss";
+@import "../../bower_components/uikit/scss/uikit-mixins.scss"; //declares mixins
 
 @import "common/variables";
 
