--- a/assets/styles/common/_nathan-global.scss
+++ b/assets/styles/common/_nathan-global.scss
@@ -101,9 +101,8 @@ footer {
 }
 
 
-@media (min-width: 768px) {
+
 	
-.cat-half, .uk-width-medium-1-1 {
+.cat-half, .uk-width-1-1 {
         margin-bottom: 1em;
-	}
 }
